# poe-tauri

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.run/: cargo_build.run.xml  cargo_run.run.xml  quality_fix.run.xml  tauri_build.run.xml  tauri_dev.run.xml
scripts/: sync-version.mjs
src/: App.css  App.tsx  Main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/english/poe1/level_tracker/: areas.json  default_guide.json  gems.json
src-tauri/data/english/poe2/level_tracker/: areas.json  default_guide.json
src-tauri/icons/: icon.icns
src-tauri/modules/: GUI.ahk  _functions.ahk  _ocr thread.ahk  _secondary thread.ahk  act-decoder.ahk  anoints.ahk  betrayal-info.ahk  cheat sheets.ahk  client log.ahk  clone-frames.ahk  exchange.ahk  hotkeys.ahk  item-checker.ahk  languages.ahk  leveling tracker.ahk  lootfilter.ahk  macros.ahk  map tracker.ahk  map-info.ahk  ocr.ahk  omni-key.ahk  qol tools.ahk  recombination.ahk  sanctum.ahk  screen-checks.ahk  search-strings.ahk  seed-explorer.ahk  settings menu.ahk  stash-ninja.ahk  statlas.ahk
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: common.rs  hint_tooltip.rs  leveling_guide.rs  mod.rs  overlay.rs  pob_settings.rs  saved_runs.rs  settings.rs  timer.rs
src-tauri/src/leveling_guide/: gem_db.rs  gem_rewards.rs  io.rs  log_watcher.rs  manager.rs  mod.rs  parser.rs  pob_parser.rs  progress.rs  types.rs
src-tauri/src/persistence/: mod.rs  store.rs
src-tauri/src/persistence/settings/: mod.rs
src-tauri/src/timer/: manager.rs  mod.rs  types.rs
src-tauri/src/window/: hint_tooltip_window.rs  identifiers.rs  input_mask_window.rs  layer_shell_support.rs  mod.rs  overlay_window.rs  overlay_windows.rs  win32.rs
src-tauri/src/window/native_window/: default_native_window.rs  gtk_util.rs  layer_shell_native_window.rs  layer_shell_support.rs  mod.rs  trait_def.rs  win32_native_window.rs  x11_native_window.rs
src/components/: LevelingGuideContent.tsx  MainView.tsx  OverlayPanel.tsx
src/constants/: WindowIdentifiers.ts
src/types/: Guide.ts  Settings.ts  Timer.ts  guide.ts
src/utils/: formatTime.ts
(+37 files in other folders)
